[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crankshaft"
version = "0.0.1"
description = "CartoDB Spatial Analysis Python Library"
authors = [{ name = "Data Services Team - CartoDB", email = "dataservices@cartodb.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
keywords = ["maps", "mapping", "tools", "spatial analysis", "geostatistics"]
dependencies = [
    "joblib==1.3.2",
    "numpy==1.26.3",
    "scipy==1.12.0",
    "pysal==24.1",
    "scikit-learn==1.4.0",
]
